# RNifti

./: .Rbuildignore  .Rhistory  .covrignore  .gitignore  .travis.yml  DESCRIPTION  Doxyfile  NAMESPACE  NEWS  README.Rmd  README.md  RNifti.Rproj  cleanup  cleanup.win  codecov.yml  configure  configure.ac
.Rproj.user/385142C8/: persistent-state  session-persistent-state
.github/workflows/: ci.yaml
R/: attribs.R  extensions.R  image.R  is_class.R  nifti.R  niftiImage_class.R  nii2oro.R  rgb.R  viewer.R  xform.R  zzz.R
clients/nifti1c/: DESCRIPTION  NAMESPACE
clients/nifti2cpp/: DESCRIPTION  NAMESPACE
inst/: COPYRIGHTS
inst/extdata/: example.json
inst/include/: .gitignore  NiftiImage.h  RNifti.h  RNiftiAPI.h  RNiftiAPI.h.in  nifti1_io.h
inst/tinytest/: test-05-data.R  test-10-io.R  test-15-manipulate.R  test-20-semantics.R  test-25-composite.R  test-30-xform.R  test-35-viewer.R  test-40-foreign.R  test-45-extensions.R  test-50-attribs.R  test-55-fuzz.R
man/: ExtensionCodes.Rd  asNifti.Rd  bidsJson.Rd  channels.Rd  defaultInfoPanel.Rd  dumpNifti.Rd  extensions.Rd  extractChannels.Rd  imageAttributes.Rd  indexing.Rd  internalImage.Rd  is_class.Rd  ndim.Rd  niftiHeader.Rd  niftiImage-class.Rd  niftiVersion.Rd  nii2oro.Rd  pixdim.Rd  readNifti.Rd  retrieveNifti.Rd  rgbArray.Rd  updateNifti.Rd  view.Rd  voxelToWorld.Rd  writeNifti.Rd  xform.Rd
scripts/: generateAPI.R
src/: .gitignore  Makevars  Makevars.in  Makevars.win  NiftiImage.cpp  NiftiImage.h  init.cpp  main.cpp  main.cpp.in  math.c  zzz.c  zzz.c.in
src/niftilib/: nifti1_io.c  nifti2_io.c
src/zlib/: .gitignore  compress.c  gzguts.h  uncompr.c
src/znzlib/: znzlib.c
standalone/: .gitignore  Makefile  README.md  RNifti  RNifti.h  lib  nii_info.cpp  nii_info.make  nii_info.nmake
standalone/RNifti/: NiftiImage.h  NiftiImage_print.h
tests/: testthat.R  tinytest.R
(+66 files in other folders)
